# SafeAging

./: .gitignore  CMakeLists.txt  FLOW2_CODE_CHANGES_SUMMARY.md  FLOW2_CODE_LOCATIONS.md  FLOW2_COMPLETION_SUMMARY.md  FLOW2_DEMO_GUIDE.ps1  FLOW2_EXECUTIVE_SUMMARY.md  FLOW2_MVP_IMPLEMENTATION.md  FLOW2_VERIFICATION_CHECKLIST.md  README_TEST.md  requirements.txt
config/: CMakeLists.txt  CMakeSettings.json  manifest.json
models/: camera_calibration.json
python/: calibrate_camera.py  fall_detection.py  rtsp_ingest_service.py  service.py
src/: detection.h  device_agent.cpp  device_agent.h  engine.cpp  engine.h  manifest.json  object_detector.cpp  object_detector.h  plugin.cpp  plugin.h
src/sample_company/vms_server_plugins/opencv_object_detection/: detection.h  device_agent.cpp  device_agent.h  engine.cpp  engine.h  frame.h  object_detector.cpp  object_detector.h  object_tracker.h  plugin.cpp
src/utils/: base64.cpp  base64.h  image_codec.cpp  image_codec.h
tools/: manage_service.ps1  test_model.py  test_service.py  test_setup.py
working_pipeline/: ARCHITECTURE_AND_ROADMAP.md  DEPLOYMENT_AND_OPERATIONS.md  DOCUMENTATION_INDEX.md  IMPLEMENTATION_TEMPLATES.md  PROJECT_SUMMARY.md  SUMMARY_VN.md  VISUAL_ARCHITECTURE_GUIDE.md
